# Editor-Light-DataBase

./: .gitignore  .gitigonre  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  build-release.bat  instruct.txt  resources.qrc
resources/: style.qss
src/: Connection_Window.cpp  Connection_Window.h  Create_Table.cpp  Create_Table.h  Database.cpp  Database.h  Main.cpp  Main_Window.cpp  Main_Window.h  Table_Explorer.cpp  Table_Explorer.h
